<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--撮った写真のImageView-->
    <ImageView
        android:id="@+id/picture"
        android:layout_width="169dp"
        android:layout_height="185dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:src="@drawable/camera" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textColor="#ff000000"
        android:layout_marginLeft="60dp"/>

    <!--撮影日時(今は任意データ)-->
    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ff000000"
        android:layout_marginLeft="80dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item"
        android:textColor="#ff000000"
        android:layout_marginLeft="60dp"/>

    <!--検査項目(今は任意でアンカ)-->
    <TextView
        android:id="@+id/inspection_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="アンカ"
        android:textColor="#ff000000"
        android:layout_marginLeft="80dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/object"
        android:textColor="#ff000000"
        android:layout_marginLeft="60dp"/>

    <TextView
        android:id="@+id/inspection_object"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="アンカ"
        android:textColor="#ff000000"
        android:layout_marginLeft="80dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/percentage"
        android:textColor="#ff000000"
        android:layout_marginLeft="60dp"/>

    <!--確信度(今は任意データ)-->
    <TextView
        android:id="@+id/certainty_factor"
        android:inputType="numberDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ff000000"
        android:layout_marginLeft="80dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textColor="#ff000000"
        android:layout_marginLeft="60dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitude"
            android:textColor="#ff000000"
            android:layout_marginLeft="80dp" />

        <!--位置情報(緯度)-->
        <TextView
            android:id="@+id/latitude"
            android:inputType="numberDecimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ff000000"
            android:layout_marginLeft="5dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longitude"
            android:textColor="#ff000000"
            android:layout_marginLeft="80dp"/>

        <!--位置情報(軽度)-->
        <TextView
            android:id="@+id/longitude"
            android:inputType="numberDecimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ff000000"
            android:layout_marginLeft="5dp" />

    </LinearLayout>

    <!--再撮影のボタン-->
    <Button
        android:id="@+id/btnRetake"
        android:layout_width="158dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/reshot_button"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="35dp"
        android:text="@string/reshot"
        android:onClick="onClick"
        android:textSize="20dp" />

    <!--保存ボタン-->
    <Button
        android:id="@+id/btnSave"
        android:layout_width="236dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/save_button"
        android:layout_marginTop="4dp"
        android:text="@string/save"
        android:onClick="onClick"
        android:textSize="20dp" />

</LinearLayout>