<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.TopActivity">
    <!--撮影ボタン-->
    <Button
        android:id="@+id/btnCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/camera"
        android:gravity="center|bottom"
        android:onClick="onClick"
        android:text="@string/takePic"
        android:textSize="30dp" />

    <!--撮影履歴ボタン-->
    <Button
        android:id="@+id/btnHistory"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="#00a3cc"
        android:onClick="onClick"
        android:text="@string/picHistory"
        android:textSize="30dp" />

    <!--設定ボタン-->
    <Button
        android:id="@+id/btnSettings"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:onClick="onClick"
        android:text="@string/settings"
        android:textSize="30dp" />
</LinearLayout>