<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activity.HistoryDetailActivity">

    <!--ユーザが選択した履歴の詳細情報を表示する画面-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--写真を表示するImageView-->
        <ImageView
            android:id="@+id/detailPic"
            android:layout_width="240dp"
            android:layout_height="300dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/date"/>

            <!--撮影日時を表示するTextView-->
            <TextView
                android:id="@+id/detailDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/item"/>

            <!--検査項目を表示するTextView-->
            <TextView
                android:id="@+id/detailName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/object"/>

            <!--検査物品を表示するTextView-->
            <TextView
                android:id="@+id/detailObject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/percentage"/>

            <!--確信度を表示するTextView-->
            <TextView
                android:id="@+id/detailPercentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textSize="18dp"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/location"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:text="@string/latitude"
                    android:layout_marginLeft="10dp"/>

                <!--緯度を表示するTextView-->
                <TextView
                    android:id="@+id/detailLatitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textSize="18dp"
                    android:layout_marginLeft="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:text="@string/longitude"
                    android:layout_marginLeft="10dp"/>

                <!--緯度を表示するTextView-->
                <TextView
                    android:id="@+id/detailLongitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textSize="18dp"
                    android:layout_marginLeft="10dp"/>

            </LinearLayout>

        </LinearLayout>

        <!--履歴削除ボタン-->
        <Button
            android:id="@+id/btnDelete"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:text="@string/delete"/>

    </LinearLayout>

</ScrollView>